# TritonOA

./: .gitignore  AUTHORS.md  LICENSE  README.md  conda.yml  pyproject.toml
setup/at/: Makefile.mac-arm64  install.sh
src/tritonoa/: __init__.py  plotting.py
src/tritonoa/data/: README.md  __init__.py  catalog.py  dataset.py  hydrophone.py  inventory.py  reader.py  signal.py  stream.py  stream_xr.py  time.py  util.py
src/tritonoa/data/formats/: base.py  factory.py  shru.py  sio.py  wav.py  whoi3dvha.py
src/tritonoa/modeling/: array.py  base.py  physics.py  setup.py  ssp.py  util.py
src/tritonoa/modeling/at/: base.py  bellhop.py  kraken.py
src/tritonoa/modeling/environment/: base.py  halfspace.py  ssp.py
src/tritonoa/signal/: util.py  waveforms.py
