[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tritonoa"
description = "A Python package for handling underwater acoustic data formats."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.txt" }
keywords = ["underwater acoustics", "signal processing", "data"]
authors = [
    { name = "Hunter Akins", email = "fakins@ucsd.edu" },
    { name = "William Jenkins", email = "wfjenkins@ucsd.edu" },
]
dependencies = [
    "Bottleneck",
    "dask[array]",
    "h5py",
    "matplotlib",
    "netCDF4",
    "numbagg",
    "numpy",
    "packaging",
    "pandas",
    "polars",
    "scipy",
    "tqdm",
    "xarray",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/NeptuneProjects/uwac-data-utils"

[tool.setuptools.packages.find]
where = ["src/"]

[tool.setuptools.dynamic]
version = { attr = "tritonoa.__version__" }
